@@ -3036,6 +3036,12 @@
             <option value="Administrator" description="[ADMINISTRATOR]"/>
           </enum>
         </field>
+        <field name="language"
+               type="select"
+               description="[LANGUAGE_PREFERENCE]"
+               method_name="populateLanguage"
+               validate="true"
+               required="true"/>
       </fields>
     </form>
 
@@ -3077,6 +3083,12 @@
                required="false"
                max_length="30"
                min_length="1"/>
+        <field name="language"
+               type="select"
+               description="[LANGUAGE_PREFERENCE]"
+               method_name="populateLanguage"
+               validate="true"
+               required="true"/>
         <field name="type"
                type="select"
                description="[USER_TYPE]"
