@@ -61,6 +61,7 @@ class LoginPage extends Page
 	// Login success
 	$_SESSION['client']['userdbo'] = $user_dbo;
 	log_notice( "Login", "User: " . $user_dbo->getUsername() . " logged in" );
+	$_SESSION['jsFunction'] = "reloadMenu()";
 	$this->goto( "home" );
 	exit();
       }
