@@ -1,0 +1,4 @@
+function reloadMenu()
+{
+	parent.menu.location.href="manager_menu.php";
+}
