@@ -1,3 +1,8 @@
+7/22/2006 - jdiamond
+====================
+
+ * (trac #88) - Implemented per-user language preferences.
+
 7/20/2006 - jdiamond
 ====================
 
